# ChangeLog for dev-lang/gnat-gcc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.37 2010/04/06 10:45:53 george Exp $

*gnat-gcc-4.3.4 (06 Apr 2010)

  06 Apr 2010; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.4.ebuild:
  new version

  08 Mar 2010; George Shapovalov <george@gentoo.org>
  gnat-gcc-4.3.3-r2.ebuild:
  added ~sparc as per #301446

*gnat-gcc-4.3.3-r2 (09 Feb 2010)

  09 Feb 2010; George Shapovalov <george@gentoo.org>
  +gnat-gcc-4.3.3-r2.ebuild:
  fixed bootstrap for sparc and repacked one for x86. Issuing -r2 to force
  mirror pick up proper bootstraps.

  04 Feb 2010; George Shapovalov <george@gentoo.org>
  gnat-gcc-4.3.3-r1.ebuild:
  added bootstrap for sparc (#301446)

  25 Jan 2010; George Shapovalov <george@gentoo.org>
  gnat-gcc-4.3.3-r1.ebuild:
  added bootstrap for x86 (#276568)

*gnat-gcc-4.3.3-r1 (21 Jan 2010)

  21 Jan 2010; George Shapovalov <george@gentoo.org>
  +gnat-gcc-4.3.3-r1.ebuild:
  new revision, uses new bootstrap, based on gcc-4.3

  28 Mar 2009; nixnut <nixnut@gentoo.org> gnat-gcc-4.3.2.ebuild:
  ppc stable #257800

  08 Feb 2009; Markus Meier <maekke@gentoo.org> gnat-gcc-4.3.2.ebuild:
  amd64/x86 stable, bug #257800

  05 Feb 2009; George Shapovalov <george@gentoo.org> ChangeLog:
  removed old versions

*gnat-gcc-4.3.3 (05 Feb 2009)

  05 Feb 2009; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.3.ebuild:
  new version

  23 Oct 2008; George Shapovalov <george@gentoo.org> gnat-gcc-3.4.6.ebuild:
  fixed repoman complaint about not using inherited autotools

*gnat-gcc-4.3.2 (23 Oct 2008)

  23 Oct 2008; George Shapovalov <george@gentoo.org> +gnat-gcc-4.3.2.ebuild:
  new version

  25 Jun 2008; George Shapovalov <george@gentoo.org> gnat-gcc-4.3.0.ebuild,
  gnat-gcc-4.3.1.ebuild:
  added gmp and mpfr to DEPEND per #223751 (thanks to Dirk Heinrichs for
  spotting this)

*gnat-gcc-4.3.1 (10 Jun 2008)
