@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/gnat-gcc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.37 2010/04/06 10:45:53 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.38 2010/04/12 08:25:44 george Exp $
+
+  12 Apr 2010; George Shapovalov <george@gentoo.org> gnat-gcc-4.3.4.ebuild:
+  updated the bootstrap
 
 *gnat-gcc-4.3.4 (06 Apr 2010)
 
